# routes/auth.routes.js
@@ -1,0 +1,11 @@
+const router = require('express').Router();
+const auth = require('../controllers/auth.controller');
+const Authorize = require('../middlewares/auth.middleware');
+
+//POST: api/auth
+router.post('/', Authorize('Administrador'),auth.login);
+
+//GET: api/auth/tiempo
+router.get('/tiempo',Authorize('Administrador'), auth.tiempo);
+
+module.exports = router
